couchpotato/couchpotato-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: couchpotato
  name: couchpotato
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: couchpotato
    spec:
      containers:
      - image: carlosedp/couchpotato
        name: couchpotato
        ports:
        - containerPort: 5050
        resources: {}
        volumeMounts:
        - mountPath: /volumes/media
          name: media
        - mountPath: /volumes/data
          name: couchpotato-data
        - mountPath: /volumes/config
          name: couchpotato-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.1.56
          path: "/mnt/mediahdd/"
      - name: couchpotato-data
        persistentVolumeClaim:
          claimName: couchpotato-data
      - name: couchpotato-config
        persistentVolumeClaim:
          claimName: couchpotato-config
status: {}
